--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dj-database-url==0.5.0
 Django==3.0.6
 django-cors-headers==3.3.0
 django-heroku==0.3.1
+gunicorn==20.0.4
 h2==3.2.0
 hpack==3.0.0
 hyperframe==5.2.0
