--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Django==3.0.6
 django-cors-headers==3.3.0
 django-heroku==0.3.1
 django-storages==1.9.1
+djangorestframework==3.11.0
 gunicorn==20.0.4
 h2==3.2.0
 hpack==3.0.0
